--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .jack {
   border: 2px;
-  background-color: brown;
+  background-color: rgb(165, 153, 42);
   text-align: justify;
   border-radius: 5px;
   padding-left: 10%;
